<resources>
    <string name="app_name" translatable="false">RD Wallpapers</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>

    <string name="empty_text">You have not added anything</string>
    <string name="all_items_deleted">All items were deleted</string>

    <string name="add_to_favorites">Add to favorites</string>
    <string name="delete_from_favorites">Delete from favorites</string>
    <string name="added_to_fav">Added to favorites</string>
    <string name="deleted_from_fav">Deleted from favorites</string>
    <string name="gallery">Gallery</string>

    <string name="no_connection">No Connection</string>
    <string name="connection_established">Connection established</string>
    <string name="go_to_online_mode">Go to online mode</string>
    <string name="offline_text_title">Connect to the internet</string>
    <string name="offline_text_content">You are offline. Check your \n connection</string>

    <string name="set_as_wp">Set as Wallpaper</string>
    <string name="crop">Crop and Set</string>
    <string name="share">Share</string>
    <string name="download">Download</string>

    <string name="set_as">Set as</string>
    <string name="share_with">Share with</string>

    <string name="downloading_file">Downloading file</string>
    <string name="please_wait">Please wait</string>
    <string name="image_downloaded">Image successfully saved to RD Wallpapers</string>
    <string name="wp_setted">Wallpaper successfully setted</string>

    <string name="storage_permission_granted">Storage permission granted</string>
    <string name="storage_permission_not_granted">Storage permission is not granted</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="storage_grant_action">Please, open Permissions and grant the storage permission</string>
    <string name="storage_rationale">Storage permission is needed to save file</string>
    <string name="something_went_wrong">Something went wrong! Check your Internet connection</string>
    <string name="grant">Grant</string>

    <string name="fam_behavior" translatable="false">com.crazzylab.rdwallpapers.ui.global.views.SnackbarBehavior</string>

    <!--Error messages-->
    <string name="unknown_error">Unknown error</string>
    <string name="network_error">Network error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="unprocessable_error">422 Unprocessable</string>
    <string name="server_error">500 Server Error</string>
    <string name="empty_response">No photos haven`t added yet</string>

    <string name="general_category">General</string>
    <string name="push_notification">Enable push notification</string>
    <string name="push_notification_key" translatable="false">Push Notification key</string>
    <string name="about">About</string>
    <string name="about_key" translatable="false">About key</string>
    <string name="share_key" translatable="false">Share key</string>

    <string name="cancel">Cancel</string>

    <string name="style_category">Style</string>
    <string name="night_mode">Night mode</string>
    <string name="night_mode_key" translatable="false">Night mode key</string>
    <string name="theme">Theme</string>
    <string name="theme_key" translatable="false">Theme key</string>

    <string name="nm_auto">Auto</string>
    <string name="nm_off">Off</string>
    <string name="nm_on">On</string>

    <array name="night_mode_array">
        <item>@string/nm_auto</item>
        <item>@string/nm_off</item>
        <item>@string/nm_on</item>
    </array>

    <!-- theme -->
    <string name="default_theme">Default</string>
    <string name="green_theme">Green</string>
    <string name="pink_theme">Pink</string>
    <string name="cyan_theme">Cyan</string>
    <string name="purple_theme">Purple</string>
    <string name="orange_theme">Orange</string>
    <string name="blue_theme">Azure</string>
    <string name="grey_theme">Grey</string>

    <array name="theme_array">
        <item>@string/default_theme</item>
        <item>@string/green_theme</item>
        <item>@string/pink_theme</item>
        <item>@string/cyan_theme</item>
        <item>@string/purple_theme</item>
        <item>@string/orange_theme</item>
        <item>@string/blue_theme</item>
        <item>@string/grey_theme</item>
    </array>

    <!-- about -->
    <string name="developer_name" translatable="false">lordofprograms</string>
    <string name="goal">Goal</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="pref_view_source_code">View source code on Github</string>
    <string name="send_feedback">Send feedback to developer</string>
    <string name="rate_this_app">Rate this app on Google Play</string>
    <string name="links">Links</string>
    <string name="goal_text">A quality application that has collected the best motivational wallpapers in order to
        become a "motivation in your pocket". Take the atmosphere of motivation and self-development with yourself and be unstoppable!</string>

    <string name="rate_url" translatable="false">https://play.google.com/store/apps/details?id=com.crazzylab.rdwallpapers</string>
    <string name="support_email" translatable="false">crazzylab@gmail.com</string>
    <string name="send_email">Send feedback email via</string>
    <string name="email_subject">Feedback about RDWallpapers app</string>
    <string name="share_text">Here is an amazing with an inspirational collection of motivational wallpapers without annoying ads!
        Download it by the link: https://play.google.com/store/apps/details?id=com.crazzylab.rdwallpapers</string>
    <string name="source_url" translatable="false">https://github.com/lordofprograms/RDWallpapers</string>
    <array name="developers_array">
        <item>@string/developer_name</item>
    </array>


</resources>
