<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/general_category"/>

    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/push_notification"
        android:key="@string/push_notification_key"/>

    <Preference
        android:title="@string/about"
        android:key="@string/about_key"/>

    <Preference
        android:title="@string/share"
        android:key="@string/share_key"/>


    <PreferenceCategory
        android:title="@string/style_category"/>

    <Preference
        android:title="@string/night_mode"
        android:key="@string/night_mode_key"/>

    <Preference
        android:title="@string/theme"
        android:key="@string/theme_key"/>

</PreferenceScreen>