<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:id="@+id/aboutToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutToolbar">

        <RelativeLayout style="@style/CardList">

            <android.support.v7.widget.CardView
                android:id="@+id/infoCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cv_properties"
                app:cardCornerRadius="@dimen/cv_properties"
                app:cardElevation="@dimen/cv_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/image_size"
                        android:layout_height="@dimen/image_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:src="@drawable/rd_logo_red" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:text="@string/app_name"
                        android:textColor="?attr/colorAccent"
                        android:textSize="@dimen/regularTextSize"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/About.Item"
                        android:id="@+id/tvVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/contentTextSize"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/margin_6dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/linksCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoCard"
                android:layout_margin="@dimen/cv_properties"
                app:cardCornerRadius="@dimen/cv_properties"
                app:cardElevation="@dimen/cv_elevation">

                <LinearLayout
                    style="@style/CardContentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/links" />

                    <TextView
                        android:id="@+id/tvRate"
                        style="@style/About.Item.Clickable"
                        android:text="@string/rate_this_app" />

                    <TextView
                        android:id="@+id/tvFeedback"
                        style="@style/About.Item.Clickable"
                        android:text="@string/send_feedback" />

                    <TextView
                        android:id="@+id/tvSource"
                        style="@style/About.Item.Clickable"
                        android:text="@string/pref_view_source_code" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/developersCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linksCard"
                android:layout_margin="@dimen/cv_properties"
                app:cardCornerRadius="@dimen/cv_properties"
                app:cardElevation="@dimen/cv_elevation">

                <LinearLayout
                    style="@style/CardContentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/CardHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developers" />

                    <TextView
                        android:id="@+id/tvDevelopers"
                        style="@style/About.Item"
                        android:text="@string/developer_name"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/goalCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/developersCard"
                android:layout_marginTop="@dimen/cv_properties"
                android:layout_marginRight="@dimen/cv_properties"
                android:layout_marginLeft="@dimen/cv_properties"
                app:cardCornerRadius="@dimen/cv_properties"
                app:cardElevation="@dimen/cv_elevation"
                android:layout_marginBottom="@dimen/margin_6dp">

                <LinearLayout
                    style="@style/CardContentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/CardHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/goal" />

                    <TextView
                        android:id="@+id/tvGoal"
                        style="@style/About.Item"
                        android:text="@string/goal_text" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>